Remove game accessor from GameInstanced superclass, pass Game as parameter where needed, reduce data retrieval where possible (update local refs at game init)